# hwpers

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  features.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: IMPLEMENTATION_SUMMARY.md  MISSING_FEATURES.md
examples/: analyze_header_footer_structure.rs  analyze_hyperlink.rs  analyze_hyperlink_structure.rs  analyze_sample.rs  analyze_single_hyperlink.rs  complete_feature_demo.rs  create_document.rs  debug_records.rs  detailed_sample_analysis.rs  generate_hwpx.rs  hyperlink_document.rs  hyperlink_reverse_engineer.rs  image_document.rs  list_document.rs  page_layout_document.rs  paragraph_formatting.rs  shape_document.rs  shape_document.rs.disabled  styled_document.rs  styled_text_document.rs  table_document.rs  text_box_document.rs  verify_generated.rs  verify_roundtrip.rs
scripts/: test-workflows.sh
src/: error.rs  lib.rs  minimal_base_template.hwp
src/crypto/: distribution.rs  mod.rs
src/hwpx/: mod.rs  reader.rs  writer.rs  xml_types.rs
src/model/: bin_data.rs  border_fill.rs  char_shape.rs  control.rs  ctrl_header.rs  document.rs  header_footer.rs  hyperlink.rs  list_header.rs  mod.rs  numbering.rs  page_def.rs  page_layout.rs  para_char_shape.rs  para_line_seg.rs  para_shape.rs  paragraph.rs  section_def.rs  style.rs  tab_def.rs  text_box.rs
tests/: advanced_table_test.rs  header_footer_test.rs  hwpx_test.rs  hyperlink_test.rs  image_test.rs  integration_test.rs  list_test.rs  page_layout_test.rs  roundtrip_test.rs  serialization_test.rs  style_test.rs  styled_text_test.rs  table_test.rs  text_box_test.rs  writer_test.rs
(+21 files in other folders)
